--- a/src/VendingMachine.css
+++ b/src/VendingMachine.css
@@ -20,12 +20,12 @@
 	margin: 1rem 0;
 }
 
-a {
+.VendingMachine a {
 	color: white;
 	text-decoration: none;
 	font-size: 1.5rem;
 }
 
-a:hover {
+.VendingMachine a:hover {
 	text-decoration: underline;
 }
